# rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs
tests/: integration.rs
