[package]
name = "ipgen"
description = "A library for generating unique and reproducible IP addresses"
version = "0.0.4"
license = "MIT/Apache-2.0"
repository = "https://github.com/ipgen/rust"
documentation = "https://docs.rs/ipgen/0.0.4"
readme = "README.md"
keywords = ["IP", "IPv6"]
authors = ["Rushmore <rushmore@webenchanter.com>"]

[dependencies]
blake2 = "0.8.1"
ipnetwork = "0.10.0"
