[package]
name = "ipgen"
description = "A library for generating unique and reproducible IP addresses"
version = "0.0.6-alpha.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/ipgen/rust"
documentation = "https://docs.rs/ipgen/0.0.4"
readme = "README.md"
keywords = ["IP", "IPv6"]
authors = ["Rushmore <rushmore@webenchanter.com>"]
edition = "2018"

[dependencies]
blake2 = { version = "0.9.1", default-features = false }
ipnetwork = "0.17.0"
