[package]
name = "ipgen"
description = "A library for generating unique and reproducible IP addresses"
version = "1.0.1"
license = "MIT/Apache-2.0"
repository = "https://github.com/ipgen/rust"
documentation = "https://docs.rs/ipgen"
readme = "README.md"
keywords = ["IP", "IPv6"]
authors = ["Rushmore <rushmore@webenchanter.com>"]
edition = "2018"

[dependencies]
blake2 = { version = "0.9.1", default-features = false }
ipnetwork = { version = "0.17.0", default-features = false }
